<resources>
    <string name="app_name">Not Dead By Deadline</string>
    <string name="deadlineHeader">Deadlines</string>
    <string name="title_activity_main">Not Dead By Deadline</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="deadlinesMenuEntry">Deadlines</string>
    <string name="homeworkMenuEntry">Homework</string>
    <string name="scheduleMenuEntry">Schedule</string>
    <string name="studyMaterialsMenuEntry">Study Materials</string>

    <string name="title_activity_deadlines">DeadlinesActivity</string>
    <string name="title_activity_homework">HomeworkActivity</string>
    <string name="title_activity_addHomework">AddHomeworkActivity</string>

    <string name="add_homework_header">Add a new homework entry</string>
    <string name="subject">Subject</string>

    <string name="set_date">Set due date</string>
    <string name="set_time">Set due time</string>
    <string name="description">Description</string>
    <string name="expected_score">Expected Score</string>
    <string name="is_regular">Regular</string>
    <string name="finish_button">Finish</string>
    <string name="submit_way">How to submit</string>
    <string name="title_activity_display_homework">DisplayHomeworkActivity</string>
    <string name="title_activity_study_materials">StudyMaterialsActivity</string>
    <string name="title_activity_deadline">DeadlineActivity</string>
    <string name="title_activity_schedule">ScheduleActivity</string>
    <string name="mainScreen">Home</string>

    <string name="monday_for_deadlines">Monday, %s</string>
    <string name="thursday_for_deadlines">Thursday, %s</string>
    <string name="tuesday_for_deadlines">Tuesday, %s</string>
    <string name="friday_for_deadlines">Friday, %s</string>
    <string name="wednesday_for_deadlines">Wednesday, %s</string>
    <string name="saturday_for_deadlines">Saturday, %s</string>
    <string name="sunday_for_deadlines">Sunday, %s</string>

    <string name="monday">Monday</string>
    <string name="thursday">Thursday</string>
    <string name="tuesday">Tuesday</string>
    <string name="friday">Friday</string>
    <string name="wednesday">Wednesday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>

    <string name="title_activity_add_homework">Add new h/w entry</string>

    <string name="next_week">Next week</string>
    <string name="previous_week">Previous week</string>
    <string name="scheduleHeader">Schedule</string>
    <string name="title_activity_add_schedule_entry">AddScheduleEntryActivity</string>
    <string name="add_schedule_entry_header">Add a new schedule entry</string>
    <string name="auditorium">Auditorium</string>
    <string name="teacher">Teacher</string>
    <string name="schedule_set_time">Set time</string>
    <string name="set_week_day">Set week day</string>
    <string name="parity_checkbox">is on even week</string>
    <string name="lv_entry_edit">Edit</string>
    <string name="lv_entry_delete">Delete</string>

    <string name="edit_hw_entry">Edit this h/w entry</string>
    <string name="edit_schedule_entry">Edit this schedule entry</string>
    <string name="regularity">Regularity: </string>
    <string name="weeks">weeks</string>
    <string name="zero">0</string>
    <string name="attach_files">Attach files</string>
    <string name="lv_entry_open_attached">Open attachment</string>
    <string name="not_specified">Not specified</string>
    <string name="action_google_calendar">Connect with Google Calendar</string>
    <string name="gc_deadlines">Add h/w deadlines to Google Calendar</string>
    <string name="gc_schedule">Add schedule entries to Google Calendar</string>
    <string name="input_end_term_date">Input term end date</string>
    <string name="week_parity">Current week parity is: %s</string>
    <string name="invert_parity">Invert week parity</string>

</resources>
