<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_main"
            android:title="@string/mainScreen" />
        <item
            android:id="@+id/nav_deadlines"
            android:title="@string/deadlinesMenuEntry" />
        <item
            android:id="@+id/nav_homework"
            android:title="@string/homeworkMenuEntry" />
        <item
            android:id="@+id/nav_schedule"
            android:title="@string/scheduleMenuEntry" />
        <item
            android:id="@+id/nav_studymaterials"
            android:title="@string/studyMaterialsMenuEntry" />
    </group>

</menu>
