<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ru.spbau.group202.notdeadbydeadline.UI.AddHomeworkActivity"
    tools:layout_editor_absoluteY="81dp">

    <TextView
        android:id="@+id/addNewHWHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="30dp"
        android:text="@string/add_homework_header"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <AutoCompleteTextView
        android:id="@+id/getSubjectACTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="98dp"
        android:hint="@string/subject"
        android:inputType="text"
        android:text=""
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/setDateButton"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="9dp"
        android:onClick="setDate"
        android:text="@string/set_date"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/getSubjectACTV"
        tools:text="@string/set_date" />

    <Button
        android:id="@+id/setTimeButton"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="33dp"
        android:onClick="setTime"
        android:text="@string/set_time"
        app:layout_constraintBaseline_toBaselineOf="@+id/setDateButton"
        app:layout_constraintEnd_toEndOf="parent"
        tools:text="@string/set_time" />

    <EditText
        android:id="@+id/getDescriptionEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="31dp"
        android:ems="10"
        android:hint="@string/description"
        android:inputType="textMul"
        android:singleLine="false"
        android:maxLines="4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/setDateButton" />

    <EditText
        android:id="@+id/expectedScore"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="135dp"
        android:layout_marginStart="16dp"
        android:ems="10"
        android:hint="@string/expected_score"
        android:inputType="numberDecimal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</android.support.constraint.ConstraintLayout>
